feat: Adição da API provisória getAllBins.
